refactor: migrate from Project to IProject/AbstractProject/MainProject/WorktreeProject